poprawa opisow na ladniejsze

--- a/online/sklep/templates/wojw/region_doln.html
+++ b/online/sklep/templates/wojw/region_doln.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Wrocław</p>
-                Wrocławⓘ (niem. Breslauⓘ, śl.-niem. Brassel, Gruß-Brassel[5][6], łac. Vratislavia, cz. Vratislav, węg. Boroszló) – miasto na prawach powiatu w południowo-zachodniej Polsce, siedziba władz województwa dolnośląskiego i powiatu wrocławskiego.
+                Wrocław, nazywany "miastem stu mostów", leży nad Odrą i słynie z pięknego Rynku oraz Ostrowa Tumskiego. Charakterystycznym elementem miasta są krasnale, których figurki można znaleźć w różnych zakątkach.
                 <img src="../../static/images/miasta/wroc.jpeg" alt="Wrocław">
                
             </div>
@@ -46,7 +46,7 @@
         <div class="block">
             <div class="city">
                 <p>Karpacz</p>
-                Karpacz – miasto w województwie dolnośląskim, w powiecie karkonoskim. Położone w Sudetach Zachodnich, w dolinie rzeki Łomnicy.
+                Karpacz to popularny górski kurort u podnóża Śnieżki, najwyższego szczytu Karkonoszy. Jedną z największych atrakcji jest drewniana Świątynia Wang, przeniesiona tutaj z Norwegii.
                 <img src="../../static/images/miasta/karp.jpeg" alt="Karpacz">
                
             </div>
@@ -72,7 +72,7 @@
         <div class="block">
             <div class="city">
                 <p>Wałbrzych</p>
-                Wałbrzych – miasto na prawach powiatu na południowym zachodzie Polski, w województwie dolnośląskim nad Pełcznicą. 
+                Wałbrzych to miasto otoczone górami, znane przede wszystkim z imponującego Zamku Książ. Dawniej był ważnym ośrodkiem górniczym, a dziś przyciąga turystów pięknymi krajobrazami i tajemnicami związanymi z historią regionu.
                 <img src="../../static/images/miasta/walb.jpeg" alt="Wałbrzych">
                
             </div>
