--- a/online/sklep/templates/wojw/region_lube.html
+++ b/online/sklep/templates/wojw/region_lube.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Lublin</p>
-                Lublin – miasto na prawach powiatu we wschodniej Polsce, stolica województwa i powiatu lubelskiego, centralny ośrodek aglomeracji lubelskiej i Lubelskiego Obszaru Metropolitalnego.
+                Lublin to miasto o bogatej historii, znane z pięknego Starego Miasta oraz Zamku Lubelskiego. Jest ważnym centrum kulturalnym i edukacyjnym, a także miejscem, gdzie odbywa się wiele festiwali, jak np. Carnaval Sztukmistrzów.
                 <img src="../../static/images/miasta/lubl.jpeg" alt="Lublin">
                
             </div>
@@ -46,7 +46,7 @@
         <div class="block">
             <div class="city">
                 <p>Zamość</p>
-                Zamość – miasto na prawach powiatu w Polsce w południowej części województwa lubelskiego, siedziba władz powiatu zamojskiego i gminy wiejskiej Zamość
+                Zamość to perła renesansowej architektury, wpisana na listę UNESCO, z pięknym Rynkiem Wielkim i fortecą. Miasto zostało zaplanowane i zbudowane przez Jana Zamoyskiego jako „miasto idealne” i do dziś zachowuje swoje unikalne cechy.
                 <img src="../../static/images/miasta/zamo.jpeg" alt="Zamość">
                
             </div>
