--- a/online/sklep/templates/wojw/region_malo.html
+++ b/online/sklep/templates/wojw/region_malo.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Kraków</p>
-                Kraków, Stołeczne Królewskie Miasto Kraków – miasto na prawach powiatu położone w południowej Polsce nad Wisłą, drugie co do liczby mieszkańców.
+                Kraków to jedno z najpiękniejszych miast w Polsce, pełne zabytków, w tym Wawelu, Rynku Głównego i Sukiennic. Miasto jest także centrum kultury, sztuki i edukacji, a jego historia i atmosfera przyciągają turystów z całego świata.
                 <img src="../../static/images/miasta/krak.jpeg" alt="Wrocław">
                
             </div>
@@ -46,7 +46,7 @@
         <div class="block">
             <div class="city">
                 <p>Zakopane</p>
-                Zakopane – miasto w południowej Polsce, w województwie małopolskim, siedziba powiatu tatrzańskiego. Największa miejscowość w bezpośrednim otoczeniu Tatr, duży ośrodek sportów zimowych, potocznie nazywany zimową stolicą Polski.
+                Zakopane to stolica polskich Tatr, słynąca z góralskiej architektury, klimatycznych karczm i popularnych tras turystycznych. To miejsce, które łączy miłośników zimowych sportów, pieszych wędrówek i kultury góralskiej.
                 <img src="../../static/images/miasta/zako.jpeg" alt="Zakopane">
                
             </div>
@@ -72,7 +72,7 @@
         <div class="block">
             <div class="city">
                 <p>Oświęcim</p>
-                Oświęcim – miasto w województwie małopolskim, siedziba władz powiatu oświęcimskiego i dwóch gmin – miejskiej oraz gminy wiejskiej Oświęcim.
+                Oświęcim to miasto o tragicznej historii, znane przede wszystkim z obozu Auschwitz-Birkenau, który jest symbolem Holokaustu. Oprócz tego, miasto oferuje piękne tereny przyrodnicze i bogatą ofertę kulturalną, w tym festiwale muzyczne i artystyczne.
                 <img src="../../static/images/miasta/oswi.jpeg" alt="Oświęcim">
                
             </div>
