--- a/online/sklep/templates/wojw/region_mazo.html
+++ b/online/sklep/templates/wojw/region_mazo.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Warszawa</p>
-                Warszawa, miasto stołeczne Warszawa[3] (m.st. Warszawa)[4] – stolica Polski[5] i województwa mazowieckiego[6], najludniejsze miasto w kraju i drugie (po Gdańsku) pod względem powierzchni[1], 
+                Warszawa, stolica Polski, to dynamiczne miasto łączące nowoczesność z historią. Symbolami miasta są Zamek Królewski, Stare Miasto oraz Pałac Kultury i Nauki. Warszawa to także centrum biznesowe i kulturalne, pełne muzeów, teatrów i parków, takich jak Łazienki Królewskie.
                 <img src="../../static/images/miasta/wars.jpeg" alt="warszawa">
                
             </div>
@@ -46,7 +46,7 @@
         <div class="block">
             <div class="city">
                 <p>Płock</p>
-                Płock – miasto w Polsce, na prawach powiatu, położone na Pojezierzu Dobrzyńskim i w Kotlinie Płockiej, nad Wisłą, w województwie mazowieckim, siedziba ziemskiego powiatu płockiego; historyczna stolica Mazowsza oraz stolica Polski w latach 1079–1138;
+                Płock to jedno z najstarszych miast w Polsce, malowniczo położone nad Wisłą. Jego wizytówką jest Wzgórze Tumskie z katedrą, gdzie znajdują się groby władców Polski. Miasto jest również ważnym ośrodkiem przemysłowym, a coroczny Audioriver Festival przyciąga miłośników muzyki elektronicznej.
                 <img src="../../static/images/miasta/ploc.jpeg" alt="Płock">
                
             </div>
@@ -72,9 +72,7 @@
         <div class="block">
             <div class="city">
                 <p>Radom</p>
-                Radom – miasto na prawach powiatu w centralno-wschodniej Polsce w województwie mazowieckim, położone nad rzeką Mleczną.
-
-                Największy ośrodek miejski w widłach Wisły i Pilicy, drugie pod względem wielkości miasto województwa mazowieckiego. 
+                Radom to miasto w centralnej Polsce, znane z bogatej historii i przemysłu. Najważniejszym wydarzeniem jest Międzynarodowe Pokazy Lotnicze Air Show, przyciągające fanów lotnictwa. Warto zobaczyć także zabytkowy Rynek oraz Zamek Królewski, który jest świadectwem dawnych dziejów miasta.
                 <img src="../../static/images/miasta/rado.jpeg" alt="Radom">
                
             </div>
