--- a/online/sklep/templates/wojw/region_opol.html
+++ b/online/sklep/templates/wojw/region_opol.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Opole</p>
-                Opole – miasto na prawach powiatu w południowo-zachodniej Polsce, siedziba władz województwa opolskiego i powiatu opolskiego.
+                Opole to stolica polskiej piosenki, znana z corocznego Krajowego Festiwalu Piosenki Polskiej. Warto odwiedzić malowniczą Wyspę Bolko oraz zobaczyć opolski rynek z charakterystycznym ratuszem w stylu włoskiego renesansu.
                 <img src="../../static/images/miasta/opol.jpeg" alt="Opole">
                
             </div>
