--- a/online/sklep/templates/wojw/region_podl.html
+++ b/online/sklep/templates/wojw/region_podl.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Białystok</p>
-                Białystok – miasto na prawach powiatu w północno-wschodniej Polsce, położone na Nizinie Północnopodlaskiej, nad rzeką Białą. Jest stolicą województwa podlaskiego i siedzibą władz ziemskiego powiatu białostockiego.
+                Białystok to największe miasto Podlasia, znane z wielokulturowej historii i pięknej przyrody. Jego wizytówką jest barokowy Pałac Branickich, nazywany „Wersalem Północy”, otoczony malowniczym ogrodem. Miasto słynie także z bliskości Puszczy Białowieskiej oraz tradycyjnych podlaskich smaków, takich jak babka i kiszka ziemniaczana.
                 <img src="../../static/images/miasta/bial.jpeg" alt="Białystok">
                
             </div>
