--- a/online/sklep/templates/wojw/region_slas.html
+++ b/online/sklep/templates/wojw/region_slas.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Katowice</p>
-                Katowice – miasto na prawach powiatu w południowej Polsce, położone we wschodniej części Górnego Śląska, na Wyżynie Śląskiej.
+                Katowice to nowoczesne miasto, które stało się centrum biznesowym i kulturalnym Górnego Śląska. Słynie z imponującego Spodka, siedziby wielu ważnych wydarzeń muzycznych i sportowych, oraz z unikalnej architektury przemysłowej, która przekształca się w przestrzeń kulturalną.
                 <img src="../../static/images/miasta/kato.jpeg" alt="Katowice">
                
             </div>
@@ -46,7 +46,7 @@
         <div class="block">
             <div class="city">
                 <p>Częstochowa</p>
-                Częstochowa – miasto na prawach powiatu w południowej Polsce, w województwie śląskim, siedziba powiatu częstochowskiego. 
+                Częstochowa to jedno z najważniejszych miejsc pielgrzymkowych w Polsce, słynące z Jasnej Góry, gdzie znajduje się obraz Matki Boskiej Częstochowskiej. Miasto ma również bogatą historię, liczne zabytki i jest centrum duchowym, które przyciąga miliony wiernych każdego roku.
                 <img src="../../static/images/miasta/czes.jpeg" alt="Częstochowa">
                
             </div>
@@ -72,8 +72,8 @@
         <div class="block">
             <div class="city">
                 <p>Zabrze</p>
-                Zabrze – miasto w Polsce na prawach powiatu położone w województwie śląskim, na Wyżynie Śląskiej, nad rzekami Kłodnicą i Bytomką.
-                <img src="../../static/images/miasta/zabr.jpeg" alt="Zabrze">
+                Zabrze to miasto związane z przemysłem węglowym, które dziś rozwija się w kierunku nowoczesnej gospodarki. Znajduje się tutaj Śląski Park Przemysłowy oraz unikalna kopalnia Guido, która łączy historię regionu z edukacją i turystyką industrialną.
+                <img src="../../static/images/miasta/zabr.jpeg" alt="Wałbrzych">
                
             </div>
             <div class="city">
