--- a/online/sklep/templates/wojw/region_swie.html
+++ b/online/sklep/templates/wojw/region_swie.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Kielce</p>
-                Kielce – miasto na prawach powiatu w południowo-wschodniej Polsce, stolica województwa świętokrzyskiego. Położone w Górach Świętokrzyskich, nad rzeką Silnicą, historycznie w Małopolsce.
+                Kielce to stolica województwa świętokrzyskiego, znana z pięknych terenów wokół Gór Świętokrzyskich. Warto odwiedzić Pałac Biskupów Krakowskich oraz rezerwat przyrody Kadzielnia, gdzie można podziwiać unikalne formacje skalne.
                 <img src="../../static/images/miasta/kiel.jpeg" alt="Kielce">
                
             </div>
@@ -46,7 +46,7 @@
         <div class="block">
             <div class="city">
                 <p>Sandomierz</p>
-                Sandomierz – miasto w województwie świętokrzyskim, w powiecie sandomierskim, położone nad Wisłą, na siedmiu wzgórzach. 
+                Sandomierz to malownicze miasto nad Wisłą, pełne średniowiecznych zabytków, w tym Katedry Sandomierskiej i Ratusza. Słynie także z wąwozów lessowych i pięknych widoków na okoliczne wzgórza.
                 <img src="../../static/images/miasta/sand.jpeg" alt="Sandomierz">
                
             </div>
