--- a/online/sklep/templates/wojw/region_zach.html
+++ b/online/sklep/templates/wojw/region_zach.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Szczecin</p>
-                Szczecin (niem. Stettinⓘ) – miasto na prawach powiatu w północno-zachodniej Polsce, stolica i największe miasto województwa zachodniopomorskiego, położone na Pobrzeżu Szczecińskim, nad Odrą i jeziorem Dąbie. Szczecin jest uznawany za historyczną stolicę Pomorza Zachodniego[8] i księstwa pomorskiego; później w granicach Szwecji, Brandenburgii, Prus i Niemiec. 
+                Szczecin to jedno z największych miast w Polsce, leżące nad Odrą, blisko granicy z Niemcami. Słynie z Wałów Chrobrego – malowniczej promenady z widokiem na rzekę i port. W mieście znajduje się również Zamek Książąt Pomorskich, który jest ważnym ośrodkiem kulturalnym.
                 <img src="../../static/images/miasta/szcz.jpeg" alt="Szczecin">
                
             </div>
@@ -46,7 +46,7 @@
         <div class="block">
             <div class="city">
                 <p>Kołobrzeg</p>
-                Kołobrzeg (niem. Kolberg) – miasto w północnej części województwa zachodniopomorskiego, w powiecie kołobrzeskim, u ujścia Parsęty do Morza Bałtyckiego, przy drodze krajowej nr 11 i drodze ekspresowej nr S6. 
+                Kołobrzeg to popularne uzdrowisko nad Bałtykiem, znane z pięknych plaż i solanek. Jego symbolem jest latarnia morska oraz molo, które przyciągają turystów przez cały rok. W mieście znajduje się także zabytkowa bazylika konkatedralna oraz liczne sanatoria i spa.
                 <img src="../../static/images/miasta/kolo.jpeg" alt="kolobrzeg">
                
             </div>
@@ -72,7 +72,7 @@
         <div class="block">
             <div class="city">
                 <p>Świnoujście</p>
-                Świnoujście (niem. Swinemünde[4]) – miasto na prawach powiatu, uzdrowisko w północno-zachodnim krańcu Polski, najdalej wysunięte na północny zachód miasto w kraju, w województwie zachodniopomorskim z portem morskim i kąpieliskiem, położone nad cieśniną Świną oraz nad Morzem Bałtyckim, 
+                Świnoujście to jedyne polskie miasto położone na wyspach, co czyni je wyjątkowym miejscem na mapie kraju. Posiada jedną z najszerszych plaż w Polsce oraz słynną latarnię morską, jedną z najwyższych w Europie. Dzięki przeprawom promowym i bliskości granicy z Niemcami jest ważnym węzłem komunikacyjnym.
                 <img src="../../static/images/miasta/swin.jpeg" alt="Świnoujście">
                
             </div>
