--- a/online/sklep/templates/wojw/region_lodz.html
+++ b/online/sklep/templates/wojw/region_lodz.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Łódź</p>
-                Łódź – miasto na prawach powiatu w środkowej Polsce. Większość dzisiejszej Łodzi znajduje się w historycznej ziemi łęczyckiej, a niewielka część miasta w ziemi sieradzkiej.
+                Łódź to miasto o przemysłowej historii, które w ostatnich latach stało się centrum kultury i sztuki. Słynie z ulicy Piotrkowskiej, jednej z najdłuższych ulic handlowych w Europie, oraz z tętniącego życiem przemysłu filmowego i mody.
                 <img src="../../static/images/miasta/lodz.jpeg" alt="Łódź">
                
             </div>
@@ -41,7 +41,7 @@
         <div class="block">
             <div class="city">
                 <p>Piotrków Trybunalski</p>
-                Piotrków Trybunalski – miasto na prawach powiatu w centralnej Polsce. Piotrków był miastem królewskim w starostwie piotrkowskim w powiecie piotrkowskim województwa sieradzkiego w końcu XVI wieku.
+                Piotrków Trybunalski to historyczne miasto, które pełniło rolę siedziby królów i sejmu. Jego zabytkowy rynek oraz gotycka katedra przyciągają turystów, a miasto jest również ważnym węzłem komunikacyjnym.
                 <img src="../../static/images/miasta/piot.jpeg" alt="Piotrków Trybunalski">
                
             </div>
