--- a/sklep/sklep/templates/wojw/region_kuja.html
+++ b/sklep/sklep/templates/wojw/region_kuja.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Bydgoszcz</p>
-                Bydgoszcz (łac. Bidgostia[4], niem. Bromberg) – miasto na prawach powiatu w północnej Polsce, siedziba wojewody i jednostek mu podporządkowanych oraz największe miasto województwa kujawsko-pomorskiego[5].
+                Bydgoszcz to miasto nad Brdą i Wisłą, znane z malowniczej Wyspy Młyńskiej i Opery Nova. Słynie również z pięknej secesyjnej architektury oraz rozwoju jako ważny ośrodek przemysłowy i akademicki.
                 <img src="../../static/images/miasta/bydg.jpeg" alt="Bydgoszcz">
                
             </div>
@@ -46,7 +46,7 @@
         <div class="block">
             <div class="city">
                 <p>Toruń</p>
-                Toruńⓘ (niem. Thorn, łac. Thorunia, Torunium) – miasto na prawach powiatu w północnej Polsce, jedna z dwóch stolic województwa kujawsko-pomorskiego – siedziba marszałka, zarządu i sejmiku województwa oraz jednostek im podporządkowanych[3].
+                Toruń to miasto Mikołaja Kopernika, znane z gotyckiej starówki wpisanej na listę UNESCO. Słynie z pierników oraz charakterystycznych spichlerzy i krzywej wieży, które przyciągają turystów z całego świata.
                 <img src="../../static/images/miasta/toru.jpeg" alt="Płock">
                
             </div>
