--- a/sklep/sklep/templates/wojw/region_podk.html
+++ b/sklep/sklep/templates/wojw/region_podk.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Rzeszów</p>
-                Rzeszów – miasto na prawach powiatu w południowo-wschodniej Polsce, stolica województwa podkarpackiego i ośrodek aglomeracji rzeszowskiej.
+                Rzeszów to dynamicznie rozwijające się miasto w południowo-wschodniej Polsce, znane z nowoczesnej architektury i historycznego rynku. Jego największym skarbem jest rzeszowska starówka oraz zabytkowy zamek, a także liczne instytucje kulturalne i edukacyjne, które przyciągają młodych ludzi z całego regionu.
                 <img src="../../static/images/miasta/rzes.jpeg" alt="Rzeszów">
                
             </div>
