--- a/sklep/sklep/templates/wojw/region_pomo.html
+++ b/sklep/sklep/templates/wojw/region_pomo.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Gdańsk</p>
-                Gdańsk (kaszub. Gduńsk[7]; niem. Danzig; łac. Gedanum, Dantiscum[8]; niderl. Danswĳk[9]) – miasto na prawach powiatu w północnej Polsce w województwie pomorskim, położone nad Morzem Bałtyckim u ujścia Motławy do Wisły nad Zatoką Gdańską, największe pod względem powierzchni miasto w kraju. 
+                Gdańsk to historyczne miasto portowe, znane z pięknej starówki i charakterystycznego Żurawia nad Motławą. Jest kolebką Solidarności – to tutaj rozpoczęły się protesty, które przyczyniły się do upadku komunizmu w Europie. Co roku przyciąga turystów Jarmarkiem Dominikańskim oraz złotą plażą na Stogach.
                 <img src="../../static/images/miasta/gdan.jpeg" alt="Szczecin">
             </div>
             <div class="city">
@@ -42,8 +42,8 @@
         <div class="block">
             <div class="city">
                 <p>Sopot</p>
-                Sopot (kaszub. Sopòt lub też Sopòtë, Copòtë, Copòt; niem. Zoppot)[2] – miasto na prawach powiatu w północnej Polsce nad Zatoką Gdańską (Morze Bałtyckie), położone na Pobrzeżu Gdańskim, między Gdańskiem a Gdynią, z którymi tworzy Trójmiasto, w obrębie aglomeracji trójmiejskiej.
-               <img src="../../static/images/miasta/sopo.jpeg" alt="kolobrzeg">
+                Sopot to elegancki kurort nad Bałtykiem, słynący z najdłuższego drewnianego molo w Europie. Główną atrakcją miasta jest ulica Bohaterów Monte Cassino, pełna kawiarni, restauracji i klubów. Znajduje się tu również Opera Leśna, gdzie odbywają się liczne koncerty i festiwale.
+                <img src="../../static/images/miasta/sopo.jpeg" alt="kolobrzeg">
             </div>
             <div class="city">
                 <p>Monte Cassino ("Monciak")</p>
@@ -65,8 +65,8 @@
         <div class="block">
             <div class="city">
                 <p>Hel</p>
-                Hel (kaszub. Hél, niem. Hela)[2] – miasto w województwie pomorskim, w powiecie puckim, położone na cyplu Mierzei Helskiej nad Morzem Bałtyckim. W latach 1975–1998 miejscowość znajdowała się w województwie gdańskim.
-           <img src="../../static/images/miasta/hel.jpeg" alt="Świnoujście">
+                Hel to malownicza miejscowość na końcu Półwyspu Helskiego, otoczona wodami Bałtyku. Jest rajem dla miłośników sportów wodnych, zwłaszcza kitesurfingu i windsurfingu. Warto tu odwiedzić Fokarium, które zajmuje się ochroną fok szarych oraz latarnię morską z pięknym widokiem na morze.
+                <img src="../../static/images/miasta/hel.jpeg" alt="Świnoujście">
             </div>
             <div class="city">
                 <p>Fokarium</p>
