--- a/sklep/sklep/templates/wojw/region_warm.html
+++ b/sklep/sklep/templates/wojw/region_warm.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Olsztyn</p>
-                Olsztyn (niem. Allensteinⓘ, łac. Allenstenium, Holstin[3]) – miasto na prawach powiatu, stolica województwa warmińsko-mazurskiego, siedziba władz ziemskiego powiatu olsztyńskiego, kurii archidiecezji warmińskiej i greckokatolickiej eparchii olsztyńsko-gdańskiej.
+                Olsztyn to stolica Warmii i Mazur, otoczona licznymi jeziorami i lasami. Najważniejszym zabytkiem miasta jest gotycki Zamek Kapituły Warmińskiej, w którym mieszkał Mikołaj Kopernik. Olsztyn przyciąga turystów nie tylko swoją historią, ale także piękną przyrodą i szlakiem kajakowym rzeki Łyny.
                 <img src="../../static/images/miasta/olsz.jpeg" alt="Olsztyn">
                
             </div>
@@ -46,7 +46,7 @@
         <div class="block">
             <div class="city">
                 <p>Elbląg</p>
-                Miasto na prawach powiatu, drugie pod względem liczby ludności i trzecie pod względem powierzchni w województwie wielkopolskim, historyczna stolica Wielkopolski obok Poznania[6][7], stolica Kaliskiego[8], siedziba powiatu kaliskiego
+                Elbląg to jedno z najstarszych miast w Polsce, znane z odbudowanej starówki z charakterystycznymi kamienicami. Przez miasto przepływa rzeka Elbląg, a w pobliżu znajduje się słynny Kanał Elbląski z unikalnym systemem pochylni. Elbląg jest także bramą do Zalewu Wiślanego, co czyni go atrakcyjnym miejscem dla miłośników żeglarstwa.
                 <img src="../../static/images/miasta/elbl.jpeg" alt="Elbląg">
                
             </div>
