--- a/sklep/sklep/templates/wojw/region_wiel.html
+++ b/sklep/sklep/templates/wojw/region_wiel.html
@@ -20,7 +20,7 @@
         <div class="block">
             <div class="city">
                 <p>Poznań</p>
-                Poznań, Stołeczne Miasto Poznań[8] (niem. Posen, łac. Posnania) – miasto na prawach powiatu w zachodniej Polsce, położone na Pojezierzu Wielkopolskim, nad rzeką Wartą, u ujścia Cybiny. Historyczna stolica Wielkopolski, od 1999 r. siedziba władz województwa wielkopolskiego i powiatu poznańskiego
+                Poznań to jedno z najstarszych i najważniejszych miast w Polsce, znane z Ostrowa Tumskiego i katedry, gdzie spoczywają pierwsi władcy Polski. Symbolem miasta są koziołki na Ratuszu oraz słynne rogale świętomarcińskie, które są tradycyjnym przysmakiem.
                 <img src="../../static/images/miasta/pozn.jpeg" alt="Poznan">
                
             </div>
@@ -46,7 +46,7 @@
         <div class="block">
             <div class="city">
                 <p>Kalisz</p>
-                Miasto na prawach powiatu, drugie pod względem liczby ludności i trzecie pod względem powierzchni w województwie wielkopolskim, historyczna stolica Wielkopolski obok Poznania[6][7], stolica Kaliskiego[8], siedziba powiatu kaliskiego
+                Kalisz to najstarsze miasto w Polsce, często nazywane kolebką polskiej państwowości. Słynie z zabytkowej katedry św. Mikołaja oraz bogatej historii związanej ze Szlakiem Bursztynowym.
                 <img src="../../static/images/miasta/kali.jpeg" alt="kalisz">
                
             </div>
@@ -72,7 +72,7 @@
         <div class="block">
             <div class="city">
                 <p>Gniezno</p>
-                Gniezno (łac. Gnesna, niem. Gnesen) – miasto w województwie wielkopolskim, pierwsza stolica Polski[5][6], pierwsza metropolia kościelna w Polsce, miasto św. Wojciecha. Siedziba władz powiatu gnieźnieńskiego i gminy Gniezno oraz archidiecezji (arcybiskupów gnieźnieńskich i prymasów Polski).
+                Gniezno to pierwsza stolica Polski i miejsce koronacji pierwszych królów. Najważniejszym zabytkiem jest Katedra Gnieźnieńska, gdzie znajdują się słynne Drzwi Gnieźnieńskie przedstawiające życie św. Wojciecha.
                 <img src="../../static/images/miasta/gnie.jpeg" alt="Gniezno">
                
             </div>
